--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-EditorStartupMap=/Game/Maps/Play
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/Session.SessionGameMode"
 GameInstanceClass=/Script/Session.CGameInstance
 
