--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,3 +19,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="SessionGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="SessionCharacter")
 
+[OnlineSubsystem]
+DefaultPlatformService=NULL
